--- a/scss/document.scss
+++ b/scss/document.scss
@@ -2,7 +2,7 @@ body
 {
     display: grid;
     
-    grid-template-rows: 100px 100px 100px;
+    grid-template-rows: 100px auto auto;
     grid-gap: 26px;
 
     margin: 0px;
@@ -12,14 +12,81 @@ body
 header 
 {
     grid-area: auto;
+
+    display: grid;
+
+    grid-template-rows: auto;
+    grid-template-columns: auto auto auto;
+
+    grid-gap: 8px;
+}
+
+header div 
+{
+    grid-area: auto;
 }
 
 footer 
 {
     grid-area:  auto;
+
+    display: grid;
+
+    grid-template-rows: auto auto;
+    grid-template-columns: auto;
+
+    grid-gap: 8px;
+}
+
+footer div
+{
+    display: flex;
+
+    grid-area:auto;
+    width: 100%;
+    
+    
+    flex-wrap: wrap;
+}
+
+footer div section
+{
+    width: 33%;
+    
+    justify-content: center;
+    flex-direction: column;
+}
+
+footer div section p 
+{
+    text-align: center;
+}
+
+.misc 
+{
+    display: block;
+}
+
+.misc p 
+{
+    
+    text-align: center;
 }
 
 main 
 {
     grid-area: auto;
+
+    display: grid;
+
+    grid-template-rows: auto auto;
+    grid-template-columns: auto;
+
+    grid-gap: 8px;
+}
+
+main section
+{
+    
+    min-width: 100%;
 }
