--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,21 @@
+* {
+  font-family: "open sans";
+  font-size: 14px;
+}
+
 body {
   display: grid;
-  grid-template-rows: 100px auto auto;
+  grid-template-rows: auto auto auto;
   grid-gap: 26px;
   margin: 0px;
   padding: 0px;
 }
 
 header {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
   grid-area: auto;
   display: grid;
   grid-template-rows: auto;
@@ -16,6 +25,11 @@ header {
 
 header div {
   grid-area: auto;
+  padding: 0px;
+}
+
+header div nav {
+  margin: 0px;
 }
 
 footer {
@@ -43,12 +57,65 @@ footer div section p {
   text-align: center;
 }
 
+footer div section ol {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer div section ol a li {
+  display: block;
+}
+
 .misc {
   display: block;
 }
 
 .misc p {
+  margin: 0px;
   text-align: center;
+}
+
+.misc ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
+}
+
+.misc ul a {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.misc ul a li {
+  display: block;
+}
+
+.page-navigation {
+  margin: 0px;
+  text-transform: uppercase;
+}
+
+.page-navigation ul {
+  display: flex;
+  justify-content: space-around;
+  margin: 0px;
+  padding: 0px;
+}
+
+.page-navigation ul a {
+  font-family: "century gothic";
+  color: black;
+  text-decoration: none;
+}
+
+.page-navigation ul a:hover {
+  color: gray;
+}
+
+.page-navigation ul a li {
+  display: block;
 }
 
 main {
@@ -61,6 +128,16 @@ main {
 
 main section {
   min-width: 100%;
+}
+
+a {
+  font-family: "open sans";
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: gray;
 }
 
 /*# sourceMappingURL=style.css.map */
