--- a/scss/document.scss
+++ b/scss/document.scss
@@ -1,8 +1,14 @@
+* {
+    font-family: "open sans";
+    font-size: 14px;
+}
+
 body 
 {
+    
     display: grid;
     
-    grid-template-rows: 100px auto auto;
+    grid-template-rows: auto auto auto;
     grid-gap: 26px;
 
     margin: 0px;
@@ -11,6 +17,11 @@ body
 
 header 
 {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 8px;
+    padding-right: 8px;
+
     grid-area: auto;
 
     display: grid;
@@ -24,6 +35,12 @@ header
 header div 
 {
     grid-area: auto;
+    padding: 0px;
+}
+
+header div nav 
+{
+    margin: 0px;
 }
 
 footer 
@@ -62,6 +79,18 @@ footer div section p
     text-align: center;
 }
 
+footer div section ol 
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+footer div section ol a li
+{
+    display: block;
+    
+}
+
 .misc 
 {
     display: block;
@@ -69,8 +98,64 @@ footer div section p
 
 .misc p 
 {
-    
+    margin: 0px;
     text-align: center;
+}
+
+.misc ul 
+{
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: center;
+    margin:0px;
+    padding: 0px;
+}
+
+.misc ul a 
+{
+    margin-left: 15px;
+    margin-right: 15px;
+
+}
+
+.misc ul a li 
+{
+    display: block;
+}
+
+.page-navigation
+{
+    margin: 0px;
+    text-transform: uppercase;
+}
+
+.page-navigation ul
+{
+    display: flex;    
+    
+    justify-content: space-around;
+    margin: 0px;
+    padding: 0px;
+
+}
+
+.page-navigation ul a 
+{
+    font-family: 'century gothic';
+    color: black;
+    text-decoration: none;
+}
+
+.page-navigation ul a:hover 
+{
+    color: gray;
+}
+
+.page-navigation ul a li
+{
+    display: block;    
+    
 }
 
 main 
@@ -89,4 +174,16 @@ main section
 {
     
     min-width: 100%;
+}
+
+a 
+{
+    font-family: "open sans";
+    color:black;
+    text-decoration: none;
+}
+
+a:hover 
+{
+    color: gray;
 }
