--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,22 @@ header {
   grid-template-rows: auto;
   grid-template-columns: auto auto auto;
   grid-gap: 8px;
+  z-index: 1;
+}
+
+#overlay-header {
+  background-image: linear-gradient(#fdfbfb, #ebedee);
+  position: fixed;
+  top: 0px;
+  width: 100%;
+}
+
+#normal-header a {
+  color: white;
+}
+
+.hide {
+  display: none;
 }
 
 header div {
@@ -37,7 +53,9 @@ footer {
   display: grid;
   grid-template-rows: auto auto;
   grid-template-columns: auto;
+  background-color: rgba(255, 255, 255, 0.2);
   grid-gap: 8px;
+  z-index: 2;
 }
 
 footer div {
@@ -106,12 +124,7 @@ footer div section ol a li {
 
 .page-navigation ul a {
   font-family: "century gothic";
-  color: black;
   text-decoration: none;
-}
-
-.page-navigation ul a:hover {
-  color: gray;
 }
 
 .page-navigation ul a li {
@@ -127,7 +140,22 @@ main {
 }
 
 main section {
+  z-index: 3;
   min-width: 100%;
+}
+
+.foreground-cover-image {
+  background-image: url("../images/foreground3.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0px;
+  height: 100%;
+  width: 100%;
+}
+
+.cover-container {
+  margin-bottom: 720px;
 }
 
 a {
