--- a/scss/document.scss
+++ b/scss/document.scss
@@ -30,6 +30,41 @@ header
     grid-template-columns: auto auto auto;
 
     grid-gap: 8px;
+
+    z-index: 1;
+}
+
+#overlay-header
+{
+    background-image: linear-gradient(#fdfbfb, #ebedee);
+    position: fixed;
+    top: 0px;
+
+    width: 100%;
+    
+}
+
+#normal-header
+{
+    
+}
+
+#normal-header a
+{
+    color: white;
+}
+
+
+
+
+.hide
+{
+    display: none;
+}
+
+header 
+{
+    
 }
 
 header div 
@@ -52,7 +87,10 @@ footer
     grid-template-rows: auto auto;
     grid-template-columns: auto;
 
+    background-color: rgba(255, 255, 255, 0.2);
+
     grid-gap: 8px;
+    z-index: 2;
 }
 
 footer div
@@ -143,13 +181,12 @@ footer div section ol a li
 .page-navigation ul a 
 {
     font-family: 'century gothic';
-    color: black;
     text-decoration: none;
 }
 
 .page-navigation ul a:hover 
 {
-    color: gray;
+    
 }
 
 .page-navigation ul a li
@@ -168,12 +205,34 @@ main
     grid-template-columns: auto;
 
     grid-gap: 8px;
+
 }
 
 main section
 {
-    
+    z-index: 3;
+
     min-width: 100%;
+}
+
+.foreground-cover-image
+{
+    background-image: url("../images/foreground3.png");
+    
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    position: absolute;
+
+    top: 0px;
+
+    height:100%;
+    width: 100%;
+}
+
+.cover-container
+{
+    margin-bottom: 720px;
 }
 
 a 
