--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,3 @@
-@import 'document.scss';
+version https://git-lfs.github.com/spec/v1
+oid sha256:6edcbbc8c5f313eaf8ca44c572f0ee851033eb936d589da25d12fe0c037a5f77
+size 24
