--- a/scss/document.scss
+++ b/scss/document.scss
@@ -1,248 +1,3 @@
-* {
-    font-family: "open sans";
-    font-size: 14px;
-}
-
-body 
-{
-    
-    display: grid;
-    
-    grid-template-rows: auto auto auto;
-    grid-gap: 26px;
-
-    margin: 0px;
-    padding: 0px;
-}
-
-header 
-{
-    padding-top: 16px;
-    padding-bottom: 16px;
-    padding-left: 8px;
-    padding-right: 8px;
-
-    grid-area: auto;
-
-    display: grid;
-
-    grid-template-rows: auto;
-    grid-template-columns: auto auto auto;
-
-    grid-gap: 8px;
-
-    z-index: 1;
-}
-
-#overlay-header
-{
-    background-image: linear-gradient(#fdfbfb, #ebedee);
-    position: fixed;
-    top: 0px;
-
-    width: 100%;
-    
-}
-
-#normal-header
-{
-    
-}
-
-#normal-header a
-{
-    color: white;
-}
-
-
-
-
-.hide
-{
-    display: none;
-}
-
-header 
-{
-    
-}
-
-header div 
-{
-    grid-area: auto;
-    padding: 0px;
-}
-
-header div nav 
-{
-    margin: 0px;
-}
-
-footer 
-{
-    grid-area:  auto;
-
-    display: grid;
-
-    grid-template-rows: auto auto;
-    grid-template-columns: auto;
-
-    background-color: rgba(255, 255, 255, 0.2);
-
-    grid-gap: 8px;
-    z-index: 2;
-}
-
-footer div
-{
-    display: flex;
-
-    grid-area:auto;
-    width: 100%;
-    
-    
-    flex-wrap: wrap;
-}
-
-footer div section
-{
-    width: 33%;
-    
-    justify-content: center;
-    flex-direction: column;
-}
-
-footer div section p 
-{
-    text-align: center;
-}
-
-footer div section ol 
-{
-    display: flex;
-    justify-content: space-between;
-}
-
-footer div section ol a li
-{
-    display: block;
-    
-}
-
-.misc 
-{
-    display: block;
-}
-
-.misc p 
-{
-    margin: 0px;
-    text-align: center;
-}
-
-.misc ul 
-{
-    display: flex;
-    flex-wrap: wrap;
-    
-    justify-content: center;
-    margin:0px;
-    padding: 0px;
-}
-
-.misc ul a 
-{
-    margin-left: 15px;
-    margin-right: 15px;
-
-}
-
-.misc ul a li 
-{
-    display: block;
-}
-
-.page-navigation
-{
-    margin: 0px;
-    text-transform: uppercase;
-}
-
-.page-navigation ul
-{
-    display: flex;    
-    
-    justify-content: space-around;
-    margin: 0px;
-    padding: 0px;
-
-}
-
-.page-navigation ul a 
-{
-    font-family: 'century gothic';
-    text-decoration: none;
-}
-
-.page-navigation ul a:hover 
-{
-    
-}
-
-.page-navigation ul a li
-{
-    display: block;    
-    
-}
-
-main 
-{
-    grid-area: auto;
-
-    display: grid;
-
-    grid-template-rows: auto auto;
-    grid-template-columns: auto;
-
-    grid-gap: 8px;
-
-}
-
-main section
-{
-    z-index: 3;
-
-    min-width: 100%;
-}
-
-.foreground-cover-image
-{
-    background-image: url("../images/foreground3.png");
-    
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    position: absolute;
-
-    top: 0px;
-
-    height:100%;
-    width: 100%;
-}
-
-.cover-container
-{
-    margin-bottom: 720px;
-}
-
-a 
-{
-    font-family: "open sans";
-    color:black;
-    text-decoration: none;
-}
-
-a:hover 
-{
-    color: gray;
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:4ae6fa5c83b32ea2ae9fefdc761980aa594da3cd4af1475516460d112ef47eef
+size 1278
