shadows added to news

--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ h3 {
 .news-full-card {
   width: 100%;
   height: 100%;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -292,6 +293,7 @@ h3 {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
   width: 100%;
   height: 100%;
 }
