--- a/scss/index.scss
+++ b/scss/index.scss
@@ -120,9 +120,10 @@ h3
 
 .news-full-card
 {
-    
     width: 100%;
     height: 100%;
+
+    box-shadow: 4px 4px 8px rgba($color: #000000, $alpha: 0.25);
 
     position: relative;
     background-repeat: no-repeat;
@@ -134,6 +135,9 @@ h3
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
+
+    
+    box-shadow: 4px 4px 8px rgba($color: #000000, $alpha: 0.25);
 
     width: 100%;
     height: 100%;
