--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 @import './body.scss';
 @import './index.scss';
+@import './headers.scss';
 @import './information.scss';
 @import './login.scss';
 @import './abonnement.scss';
+@import './images.scss';
