--- a/scss/information_image.scss
+++ b/scss/information_image.scss
@@ -2,21 +2,22 @@
 
 #page_information_image
 {
-    position: absolute;
+    position : absolute;
 
-    top:-10px;
+    top      : -10px;
 
-    width: 100%;
-    height: 100%;
+    width       : 100%;
+    height      : 100%;
 
-    background-size: cover;
+    background-size : cover;
 }
 
+/* Depended on screen size */
 @media only screen and ( min-width:0px )
 {
     #page_information_image
     {
-        background-image: url('../images/covers/info/256/info.png');
+        background-image : url('../images/covers/info/256/info.png');
     }
 }
 
@@ -24,7 +25,7 @@
 {
     #page_information_image
     {
-        background-image: url('../images/covers/info/512/info.png');
+        background-image : url('../images/covers/info/512/info.png');
     }
 }
 
@@ -33,7 +34,7 @@
 {
     #page_information_image
     {
-        background-image: url('../images/covers/info/1024/info.png');
+        background-image : url('../images/covers/info/1024/info.png');
     }
 }
 
@@ -42,14 +43,15 @@
 {
     #page_information_image
     {
-        background-image: url('../images/covers/info/2048/info.png');
+        background-image : url('../images/covers/info/2048/info.png');
     }
 }
 
+/* Anything above normal size */
 @media only screen and ( min-width:1920px )
 {
     #page_information_image
     {
-        background-image: url('../images/covers/info/original/info.png');
+        background-image : url('../images/covers/info/original/info.png');
     }
 }
