--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
-@import './body.scss';
-@import './index.scss';
-@import './headers.scss';
-@import './information.scss';
-@import './login.scss';
-@import './abonnement.scss';
+@import './backend/body.scss';
+@import './backend/index.scss';
+@import './backend/headers.scss';
+@import './backend/information.scss';
+@import './backend/login.scss';
+@import './backend/abonnement.scss';
