--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,20 @@
-footer, header, main, body {
-  padding: 0px;
+h1 {
+  text-transform: uppercase;
+  text-align: center;
+  font-family: "verdana";
+  color: #D63031;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-family: "verdana";
+}
+
+h3 {
   margin: 0px;
-  width: 100%;
-}
-
-body {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto auto auto;
-  grid-gap: 8px;
-}
-
-main {
-  grid-area: auto;
-}
-
-.page-limit {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 8px;
+  margin-bottom: 24px;
+  font-family: "verdana";
 }
 
 header nav ul {
@@ -190,6 +186,29 @@ footer {
   list-style-type: none;
 }
 
+main, body, header, footer {
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+}
+
+body {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+  grid-gap: 8px;
+}
+
+main {
+  grid-area: auto;
+}
+
+.page-limit {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .space-container {
   width: 100%;
   height: 725px;
@@ -305,25 +324,6 @@ main section {
   grid-template-columns: auto;
   grid-template-areas: "half" "half";
   grid-gap: 8px;
-}
-
-h1 {
-  text-transform: uppercase;
-  text-align: center;
-  font-family: "verdana";
-  color: #D63031;
-}
-
-h2 {
-  text-transform: uppercase;
-  font-family: "verdana";
-}
-
-h3 {
-  margin: 0px;
-  margin-top: 8px;
-  margin-bottom: 24px;
-  font-family: "verdana";
 }
 
 .information-container {
