--- a/scss/backend/document/body.scss
+++ b/scss/backend/document/body.scss
@@ -1,3 +1,8 @@
+@import './headers.scss';
+
+@import './header.scss';
+@import './footer.scss';
+
 %no-base
 {
     padding : 0px;
@@ -33,6 +38,3 @@ main
     margin-left: auto;
     margin-right: auto;
 }
-
-@import './header.scss';
-@import './footer.scss';
