--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
-@import './backend/body.scss';
+@import './backend/document/body.scss';
+
 @import './backend/index.scss';
-@import './backend/headers.scss';
 @import './backend/information.scss';
 @import './backend/login.scss';
 @import './backend/abonnement.scss';
