--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ footer {
   text-transform: uppercase;
 }
 
+.sponsored-by {
+  min-height: 125px;
+}
+
 .sponsored-by ol {
   display: flex;
   justify-content: space-around;
@@ -93,12 +97,12 @@ footer {
 
 .sponsored-by ol a {
   opacity: 0.25;
-  transition: 1s;
+  transition: 0.75s;
 }
 
 .sponsored-by ol a:hover {
   opacity: 1;
-  transition: 1s;
+  transition: 0.75s;
 }
 
 .sponsored-by ol a li {
@@ -107,12 +111,12 @@ footer {
 }
 
 .sponsored-by ol a li img {
-  transition: 1s;
+  transition: 0.75s;
   height: 75px;
 }
 
 .sponsored-by ol a:hover li img {
-  transition: 1s;
+  transition: 0.75s;
   height: 100px;
 }
 
