--- a/scss/front_image.scss
+++ b/scss/front_image.scss
@@ -18,7 +18,7 @@
 {
     #page_front_image
     {
-        background-image : url('../images/covers/front/256/front.jpg');
+        background-image : url('../images/covers/front/256/front.png');
     }
 }
 
@@ -26,7 +26,7 @@
 {
     #page_front_image
     {
-        background-image : url('../images/covers/front/512/front.jpg');
+        background-image : url('../images/covers/front/512/front.png');
     }
 }
 
@@ -35,7 +35,7 @@
 {
     #page_front_image
     {
-        background-image : url('../images/covers/front/1024/front.jpg');
+        background-image : url('../images/covers/front/1024/front.png');
     }
 }
 
@@ -44,7 +44,7 @@
 {
     #page_front_image
     {
-        background-image : url('../images/covers/front/2048/front.jpg');
+        background-image : url('../images/covers/front/2048/front.png');
     }
 }
 
