--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Base */
 h1 {
   text-transform: uppercase;
   text-align: center;
@@ -87,7 +88,7 @@ footer {
 }
 
 .sponsored-by {
-  min-height: 125px;
+  min-height: 145px;
 }
 
 .sponsored-by p {
@@ -95,6 +96,8 @@ footer {
 }
 
 .sponsored-by ol {
+  padding: 0px;
+  margin: 0px;
   display: flex;
   justify-content: space-around;
 }
@@ -242,6 +245,7 @@ main {
   margin-right: auto;
 }
 
+/* Pages */
 .space-container {
   width: 100%;
   height: 725px;
