--- a/scss/document/footer.scss
+++ b/scss/document/footer.scss
@@ -11,8 +11,7 @@ footer
 
 .sponsored-by
 {
-    min-height: 125px;
-
+    min-height: 145px;
 }
 
 .sponsored-by p 
@@ -23,6 +22,9 @@ footer
 
 .sponsored-by ol
 {
+    padding: 0px;
+    margin: 0px;
+
     display: flex;
     justify-content: space-around;
 }
