--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
-@import './backend/document/body.scss';
+/* Base */
+@import './document/body.scss';
 
+/* Pages */
 @import './backend/index.scss';
 @import './backend/information.scss';
+
 @import './backend/login.scss';
 @import './backend/abonnement.scss';
