--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,17 @@ footer {
 }
 
 .sponsored-by {
-  min-height: 145px;
+  min-height: 175px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-image: linear-gradient(to bottom, #fdfbfb, #ebedee);
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
 }
 
 .sponsored-by p {
   text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .sponsored-by ol {
