--- a/scss/document/header.scss
+++ b/scss/document/header.scss
@@ -16,8 +16,14 @@ header
     grid-gap: 0px;
     
     
-    background-image: linear-gradient(to bottom, #fdfbfb, #ebedee);
-    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.45);
+    background-image: linear-gradient( to bottom,
+                                       #fdfbfb,
+                                       #ebedee );
+
+    box-shadow: 0px 6px
+                16px
+                rgba( 0, 0, 0,
+                        0.25 );
 
     z-index: 10;
 }
