--- a/css/front_image.css
+++ b/css/front_image.css
@@ -1,6 +1,9 @@
+/* 
+    Text Generics
+*/
 #page_front_image {
   position: absolute;
-  top: -10px;
+  top: -32px;
   width: 100%;
   height: 100%;
   background-size: cover;
