--- a/scss/document/body.scss
+++ b/scss/document/body.scss
@@ -1,26 +1,16 @@
+
+*
+{
+    @extend %default-paragraph;
+}
+
+/*  */
 @import './headers.scss';
+
+@import './placeholders.scss';
 
 @import './header.scss';
 @import './footer.scss';
-
-
-%no-base
-{
-    padding : 0px;
-    margin  : 0px;
-
-    width   : 100%;
-}
-
-#load_footer
-{
-    z-index: 10;
-}
-
-#load_header 
-{
-    z-index: 10;
-}
 
 body 
 {
@@ -31,16 +21,17 @@ body
     grid-template-columns : auto;
     grid-template-rows    : auto auto auto;
 
-    grid-gap              : 8px;
+    grid-gap              : $document-page-gap;
 }
 
 main 
 {
     @extend %no-base;
-    padding-bottom: 26px;
+    @extend %extend-width-fully;
+    
     grid-area: auto;
 
-    min-height: 500px;
+    min-height: $document-main-minimum-height;
 }
 
 .page-limit
