--- a/scss/information_image.scss
+++ b/scss/information_image.scss
@@ -1,10 +1,14 @@
+@import './_var/variables';
+@import './_var/generics';
+
 @import './backend/images.scss';
+
 
 #page_information_image
 {
     position : absolute;
 
-    top      : -10px;
+    top      : $document-page-gap-offset;
 
     width       : 100%;
     height      : 100%;
