--- a/scss/_var/_variables.scss
+++ b/scss/_var/_variables.scss
@@ -13,3 +13,7 @@ $document-main-minimum-height: 450px;
 
 $document-footer-sponsor-minimum-height:175px;
 
+$link-rest-color: white;
+$link-default-rest-color:black;
+
+$link-active-color: #D63031;
