--- a/scss/backend/information.scss
+++ b/scss/backend/information.scss
@@ -5,12 +5,14 @@
 
     display: grid;
 
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin-top: 32px;
+    
 
-    grid-gap: 8px;
-    grid-template-rows: auto;
+    grid-gap: 32px;
+    grid-template-rows: 1fr;
     grid-template-columns:1fr 1fr;
+    
+    box-shadow: 0px 2px 16px rgba($color: #000000, $alpha: 0.25);
 }
 
 .information-container img
@@ -23,6 +25,12 @@
 {
     grid-area: information_text;
     text-align: center;
+
+    word-spacing: 1.5px;
+
+    padding-left: 16px;
+    padding-right: 16px;
+    
 }
 
 .image-to-left
