--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-h3, main, body, footer, header {
+h4, h3, main, body, footer, header {
   margin: 0px;
 }
 
@@ -21,7 +21,7 @@ main {
 /* 
     Text Generics
 */
-h3, h2, h1 {
+h4, h3, h2, h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-transform: uppercase;
 }
@@ -44,6 +44,18 @@ h2 {
 h3 {
   margin-top: 8px;
   margin-bottom: 24px;
+}
+
+h4 {
+  position: absolute;
+  color: white;
+  bottom: 25%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background-color: #D63031;
+  padding: 8px;
+  border-radius: 8px;
 }
 
 /*
