--- a/scss/document/headers.scss
+++ b/scss/document/headers.scss
@@ -20,3 +20,22 @@ h3
     margin-top      : 8px;
     margin-bottom   : 24px;
 }
+
+h4 
+{  @extend %default-header;
+   @extend %no-margins;
+
+   position: absolute;
+
+   color: white;
+   
+   bottom: 25%;
+   
+   left: 50%;
+-webkit-transform: translateX(-50%);
+transform: translateX(-50%);
+
+   background-color: #D63031;
+   padding: 8px;
+   border-radius: 8px;
+}
