--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,8 @@ header {
     'As link list'
 */
 header nav ul {
+  height: 36px;
+  padding: 0px;
   margin-top: 8px;
   display: flex;
   justify-content: space-around;
@@ -94,12 +96,16 @@ header nav ul {
     As links in the header
 */
 header nav ul a {
-  color: #FFFFFF;
+  color: white;
   text-decoration: none;
   list-style-type: none;
   margin-left: 18px;
   margin-right: 18px;
   font-family: "verdana";
+}
+
+header nav ul a:hover {
+  color: #D63031;
 }
 
 header nav ul a li {
@@ -430,7 +436,6 @@ main section {
   grid-gap: 32px;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr;
-  box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.25);
 }
 
 .information-container img {
