--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 100%;
+  border: 4px solid black;
 }
 
 #opret-profile {
@@ -555,6 +556,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 100%;
+  border: 4px solid black;
 }
 
 #contact {
@@ -562,6 +564,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 100%;
+  border: 4px solid black;
 }
 
 .option-description {
