--- a/scss/backend/abonnement.scss
+++ b/scss/backend/abonnement.scss
@@ -46,6 +46,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 100%;
+    border: 4px solid black;
 }
 
 #opret-profile
@@ -54,6 +55,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 100%;
+    border: 4px solid black;
 }
 
 #contact
@@ -62,6 +64,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 100%;
+    border: 4px solid black;
 }
 
 .option-description
