--- a/scss/backend/abonnement.scss
+++ b/scss/backend/abonnement.scss
@@ -37,48 +37,60 @@
 
     margin-right : 28px;
     margin-left  : 28px;
+
     position: relative;
 }
 
 #brev
 {
-    background-image: url('../images/mail.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 100%;
-    border: 4px solid black;
+    background-image    : url('../images/mail.png');
+    background-repeat   : no-repeat;
+    background-size     : cover;
+
+    border-radius : 100%;
+
+    border : 4px solid black;
 }
 
 #opret-profile
 {
-    background-image: url('../images/www.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image    : url('../images/www.png');
+    background-repeat   : no-repeat;
+    background-size     : cover;
+    
     border-radius: 100%;
-    border: 4px solid black;
+
+    border : 4px solid black;
 }
 
 #contact
 {
-    background-image: url('../images/tlf.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image    : url('../images/tlf.png');
+    background-repeat   : no-repeat;
+    background-size     : cover;
+
     border-radius: 100%;
-    border: 4px solid black;
+    
+    border : 4px solid black;
 }
 
 .option-description
 {
     width: 100%;
 
-    position: absolute;
-    background-color: #DFE6E9;
-    margin: 0px;
-    padding: 0px;
-    
-    bottom: 0px;
+    position : absolute;
+    bottom   : 0px;
 
-    border:1px solid #707070;
+    background-color: #DFE6E9;
+    
+    
+    background-image : linear-gradient( to bottom,
+                                        #fdfbfb,
+                                        #ebedee );
+    
+    margin  : 0px;
+    padding : 0px;
+
 }
 
 .option-description p
