--- a/scss/_var/_variables.scss
+++ b/scss/_var/_variables.scss
@@ -1,7 +1,10 @@
 $action-transition : 0.75s;
 
 $primary_font: Verdana, Geneva, Tahoma, sans-serif;
+
 $secondary_font: 'open sans';
+
+$header_primary_font: 'open sans';
 
 $not-active-opacity: 0.25;
 $active-opacity: 1.00;
