--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,6 @@
 /* Pages */
 @import './backend/index.scss';
 @import './backend/information.scss';
-
-@import './backend/login.scss';
+@import './backend/news.scss';
 @import './backend/abonnement.scss';
+@import './backend/login.scss';
