--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-h4, h3, main, body, footer, header {
+a h4, h3, main, body, footer, header {
   margin: 0px;
 }
 
@@ -10,7 +10,11 @@ main, body, footer, header {
   width: 100%;
 }
 
-main {
+#header-logo img {
+  height: 100%;
+}
+
+main, #header-logo img {
   width: 100%;
 }
 
@@ -21,7 +25,7 @@ main {
 /* 
     Text Generics
 */
-h4, h3, h2, h1 {
+a h4, h3, h2, h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-transform: uppercase;
 }
@@ -46,16 +50,23 @@ h3 {
   margin-bottom: 24px;
 }
 
-h4 {
+a h4 {
   position: absolute;
-  color: white;
+  color: #D63031;
   bottom: 25%;
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
-  background-color: #D63031;
   padding: 8px;
   border-radius: 8px;
+  border: 2px solid #D63031;
+  transition: 0.75s;
+}
+
+a:hover h4 {
+  transition: 0.75s;
+  background-color: #D63031;
+  color: white;
 }
 
 /*
@@ -68,6 +79,7 @@ header nav ul {
 header {
   background-color: white;
   text-transform: uppercase;
+  font-family: "open sans";
   grid-area: auto;
   display: grid;
   grid-template-columns: auto;
@@ -92,6 +104,27 @@ header nav ul {
   justify-content: space-around;
 }
 
+header nav ul a li {
+  display: block;
+}
+
+#header-logo {
+  position: relative;
+  width: 75px;
+  height: 75px;
+}
+
+#header-logo img {
+  position: absolute;
+  top: -20px;
+}
+
+#header-navigation-color {
+  background-color: #090828;
+  color: #FFFFFF;
+  height: 36px;
+}
+
 /*
     As links in the header
 */
@@ -106,29 +139,6 @@ header nav ul a {
 
 header nav ul a:hover {
   color: #D63031;
-}
-
-header nav ul a li {
-  display: block;
-}
-
-#header-logo {
-  position: relative;
-  width: 75px;
-  height: 75px;
-}
-
-#header-logo img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -20px;
-}
-
-#header-navigation-color {
-  background-color: #090828;
-  color: #FFFFFF;
-  height: 36px;
 }
 
 footer {
@@ -462,56 +472,6 @@ p {
   font-family: "verdana";
 }
 
-.login-page {
-  width: 400px;
-  margin-left: auto;
-  margin-right: auto;
-  text-transform: uppercase;
-}
-
-.login-page img {
-  width: 100%;
-  height: 100%;
-}
-
-.image-container-center {
-  width: 145px;
-  height: 145px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.login-page a {
-  color: #D63031;
-  text-decoration: none;
-  text-align: center;
-}
-
-.login-page form input {
-  width: 250px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.center-form-button {
-  width: 265px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 8px;
-}
-
-.login-misc a {
-  margin: 0px;
-  padding: 0px;
-}
-
-.login-misc a p {
-  text-transform: uppercase;
-  font-size: 12px;
-  margin: 0px;
-  padding: 0px;
-}
-
 .abonnement-page {
   width: 1080px;
   margin-left: auto;
@@ -590,6 +550,56 @@ p {
 
 .option-description p:last-child {
   margin-bottom: 8px;
+}
+
+.login-page {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+}
+
+.login-page img {
+  width: 100%;
+  height: 100%;
+}
+
+.image-container-center {
+  width: 145px;
+  height: 145px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.login-page a {
+  color: #D63031;
+  text-decoration: none;
+  text-align: center;
+}
+
+.login-page form input {
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.center-form-button {
+  width: 265px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 8px;
+}
+
+.login-misc a {
+  margin: 0px;
+  padding: 0px;
+}
+
+.login-misc a p {
+  text-transform: uppercase;
+  font-size: 12px;
+  margin: 0px;
+  padding: 0px;
 }
 
 /*# sourceMappingURL=style.css.map */
