--- a/scss/document/headers.scss
+++ b/scss/document/headers.scss
@@ -21,13 +21,13 @@ h3
     margin-bottom   : 24px;
 }
 
-h4 
+a h4 
 {  @extend %default-header;
    @extend %no-margins;
 
    position: absolute;
 
-   color: white;
+   color: #D63031;
    
    bottom: 25%;
    
@@ -35,7 +35,16 @@ h4
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 
-   background-color: #D63031;
    padding: 8px;
    border-radius: 8px;
+   border: 2px solid #D63031;
+   
+   transition: $action-transition;
+}
+
+a:hover h4 
+{
+    transition: $action-transition;
+    background-color: #D63031;
+    color: white;
 }
