--- a/scss/document/header.scss
+++ b/scss/document/header.scss
@@ -95,6 +95,8 @@ header nav ul a li
 */
 header nav ul a 
 {
+   @extend %action-button;
+   
    color: $link-rest-color;
    text-decoration: none;
     
@@ -108,5 +110,6 @@ header nav ul a
 
 header nav ul a:hover
 {
+    @extend %action-button;
    color: $link-active-color;
 }
