--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ a:hover h4 {
   transition: 0.75s;
   background-color: #D63031;
   color: white;
+  border: 2px solid rgba(214, 48, 49, 0);
 }
 
 /*
