--- a/scss/backend/abonnement.scss
+++ b/scss/backend/abonnement.scss
@@ -8,37 +8,46 @@
 
 .abonnement-page p 
 {
-    margin-left: 40px;
-    font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-left : 40px;
+    
+    font-weight : bold;
+
+    font-family : Verdana,
+                  Geneva,
+                  Tahoma,
+                  sans-serif;
 }
 
 .abonnement-page ul li
 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-decoration: underline;
+    font-family     : Verdana, 
+                      Geneva, 
+                      Tahoma, 
+                      sans-serif;
+
+    text-decoration : underline;
 }
 
 .options-list
 {
     display: flex;
 
-    margin: 0px;
+    margin : 0px;
     
-    justify-content: center;
+    justify-content : center;
 }
 
 .option
 {
     
 
-    width: 250px;
-    height: 250px;
+    width   : 250px;
+    height  : 250px;
 
     margin-right : 28px;
     margin-left  : 28px;
 
-    position: relative;
+    position : relative;
 }
 
 #brev
@@ -57,8 +66,8 @@
     background-image    : url('../images/www.png');
     background-repeat   : no-repeat;
     background-size     : cover;
-    
-    border-radius: 100%;
+
+    border-radius : 100%;
 
     border : 4px solid black;
 }
@@ -69,8 +78,8 @@
     background-repeat   : no-repeat;
     background-size     : cover;
 
-    border-radius: 100%;
-    
+    border-radius : 100%;
+
     border : 4px solid black;
 }
 
@@ -83,33 +92,31 @@
 
     background-color: #DFE6E9;
     
-    
     background-image : linear-gradient( to bottom,
                                         #fdfbfb,
                                         #ebedee );
     
     margin  : 0px;
     padding : 0px;
-
 }
 
 .option-description p
 {
-    margin: 0px;
-    padding: 0px;
+    margin  : 0px;
+    padding : 0px;
 
-    font-size: 12px;
-    text-align: center;
+    font-size  : 12px;
+    text-align : center;
 
 
 }
 
 .option-description p:first-child
 {
-    margin-top: 8px;
+    margin-top : 8px;
 }
 
 .option-description p:last-child
 {
-    margin-bottom: 8px;
+    margin-bottom : 8px;
 }
