--- a/scss/_var/_generics.scss
+++ b/scss/_var/_generics.scss
@@ -40,10 +40,15 @@
 /* 
     Text Generics
 */
+%default-uppercase
+{
+    text-transform: uppercase;
+}
+
 %default-header
 {
+    @extend %default-uppercase;
     font-family: $primary_font;
-    text-transform: uppercase;
 }
 
 %default-paragraph
