--- a/scss/backend/login.scss
+++ b/scss/backend/login.scss
@@ -1,11 +1,11 @@
 .login-page
 {
+    @extend %default-uppercase;
+    
     width : 400px;
 
     margin-left  : auto;
     margin-right : auto;
-    
-    text-transform : uppercase;
 }
 
 .login-page img
@@ -62,7 +62,7 @@
 
 .login-misc a p 
 {
-    text-transform : uppercase;
+    @extend %default-uppercase;
 
     font-size : 12px;
     
