--- a/scss/backend/login.scss
+++ b/scss/backend/login.scss
@@ -45,6 +45,7 @@
 
     margin-left  : auto;
     margin-right : auto;
+    
     margin-top   : 8px;
 }
 
@@ -55,17 +56,13 @@
 
 .login-misc a
 {
-    
-    margin  : 0px;
-    padding : 0px;
+    @extend %no-margin-or-padding;
 }
 
 .login-misc a p 
 {
     @extend %default-uppercase;
+    @extend %no-margin-or-padding;
 
     font-size : 12px;
-    
-    margin  : 0px;
-    padding : 0px;
 }
