--- a/scss/backend/abonnement.scss
+++ b/scss/backend/abonnement.scss
@@ -48,36 +48,39 @@
     position : relative;
 }
 
-#brev
+//
+%option-type-show
 {
-    background-image    : url('../images/mail.png');
     background-repeat   : no-repeat;
     background-size     : cover;
 
     border-radius : 100%;
+}
 
+#brev
+{
+    @extend %option-type-show;
+
+    background-image    : url('../images/mail.png');
+    
     border : 4px solid black;
 }
 
 #opret-profile
 {
+    @extend %option-type-show;
+    
     background-image    : url('../images/www.png');
-    background-repeat   : no-repeat;
-    background-size     : cover;
-
-    border-radius : 100%;
-
+    
     border : 4px solid black;
 }
 
 #contact
 {
+    @extend %option-type-show;
+    
     background-image    : url('../images/tlf.png');
-    background-repeat   : no-repeat;
-    background-size     : cover;
-
-    border-radius : 100%;
-
+    
     border : 4px solid black;
 }
 
