--- a/scss/_var/_variables.scss
+++ b/scss/_var/_variables.scss
@@ -6,13 +6,16 @@ $secondary_font: 'open sans';
 
 $header_primary_font: 'open sans';
 
-$not-active-opacity: 0.25;
-$active-opacity: 1.00;
+//
+$not-active-opacity : 0.25;
+$active-opacity     : 1.00;
 
-$document-page-gap: 32px;
-$document-page-gap-offset: -32px;
+//
+$document-page-gap        : 32px;
+$document-page-gap-offset : -32px;
 
-$document-main-minimum-height: 450px;
+//
+$document-main-minimum-height : 450px;
 
 $document-footer-sponsor-minimum-height:175px;
 
