--- a/scss/document/footer.scss
+++ b/scss/document/footer.scss
@@ -3,9 +3,9 @@ footer
     @extend %no-base;
     @extend %default-uppercase;
 
-    z-index: 10;
+    z-index : 10;
 
-    grid-area: auto;
+    grid-area : auto;
 }
 
 .sponsored-by
@@ -80,7 +80,7 @@ footer
 .footer-content
 {
     background-color: #090828;
-    color:#FFFFFF;
+    color           : #FFFFFF;
 
     font-family: 'verdana';
 }
@@ -92,7 +92,7 @@ footer
 
 .contact-info p 
 {
-    margin : 0px;
+    @extend %no-margins;
     text-align : center;
 }
 
@@ -113,23 +113,21 @@ footer
 .footer-social-links
 {
     @extend %none-list-style-type;
+    @extend %no-paddings;
 
     display : flex;
     
     justify-content : center;
     
     height  : 100%;
-
-    padding :0px;
-    
 }
 
 .footer-social-links a 
 {
+    @extend %no-paddings;
+
     color : $link-rest-color;
     font-size : 48px;
-    
-    padding : 0px;
 
     transition : $action-transition;
 }
@@ -194,8 +192,9 @@ footer
 
 .footer-base ol a li
 {
-    display : inline;
     @extend %none-list-style-type;
+
+    display : inline;
 }
 
 .footer-social-links a li
