--- a/scss/_var/_generics.scss
+++ b/scss/_var/_generics.scss
@@ -70,4 +70,9 @@ $phundred : 100%;
     font-family : $secondary_font;
 }
 
+%default-link
+{
+    text-decoration : none;
+}
+
 @import './_animated.scss';
