--- a/scss/document/header.scss
+++ b/scss/document/header.scss
@@ -3,9 +3,9 @@ header
     @extend %no-base;
     @extend %default-uppercase;
 
-    background-color: white;
+    background-color : white;
 
-    font-family: $header_primary_font;
+    font-family : $header_primary_font;
 
     grid-area : auto;
     display   : grid;
@@ -91,11 +91,8 @@ header nav ul a li
 header nav ul a 
 {
    @extend %none-list-style-type;
-
    @extend %resting;
-
-   text-decoration: none;
-    
+   @extend %default-link;
 
    margin-left  : 18px;
    margin-right : 18px;
