--- a/scss/_var/_variables.scss
+++ b/scss/_var/_variables.scss
@@ -23,3 +23,13 @@ $link-rest-color: white;
 $link-default-rest-color:black;
 
 $link-active-color: #D63031;
+
+$tier-1     : 1px;
+$tier-2     : 257px;
+$tier-3     : 513px;
+$tier-4     : 726px;
+$tier-5     : 1025px;
+$tier-6     : 1281px;
+$tier-7     : 1537px;
+$tier-8     : 1793px;
+$tier-9     : 2049px;
