--- a/scss/front_image.scss
+++ b/scss/front_image.scss
@@ -1,23 +1,21 @@
-@import './_var/variables';
-@import './_var/generics';
+@import './_var/variables.scss';
+@import './_var/generics.scss';
 
 @import './backend/images.scss';
 
 #page_front_image
 {
+    @extend %extend-element-fully;
     position : absolute;
 
     top      : $document-page-gap-offset;
-
-    width       : 100%;
-    height      : 100%;
 
     background-size : cover;
 }
 
 
 /* Depended on screen size */
-@media only screen and ( min-width:0px )
+@media only screen and ( min-height:$tier-1 )
 {
     #page_front_image
     {
@@ -25,7 +23,7 @@
     }
 }
 
-@media only screen and ( min-width:257px )
+@media only screen and ( min-height:$tier-2 )
 {
     #page_front_image
     {
@@ -34,7 +32,7 @@
 }
 
 
-@media only screen and ( min-width:513px )
+@media only screen and ( min-height:$tier-3 )
 {
     #page_front_image
     {
@@ -43,7 +41,7 @@
 }
 
 
-@media only screen and ( min-width:1025px )
+@media only screen and ( min-height:$tier-5 )
 {
     #page_front_image
     {
@@ -52,7 +50,7 @@
 }
 
 /* Anything above normal size */
-@media only screen and ( min-width:1920px )
+@media only screen and ( min-height:1920px )
 {
     #page_front_image
     {
