--- a/scss/information_image.scss
+++ b/scss/information_image.scss
@@ -6,18 +6,17 @@
 
 #page_information_image
 {
+    @extend %extend-element-fully;
+
     position : absolute;
 
     top      : $document-page-gap-offset;
-
-    width       : 100%;
-    height      : 100%;
 
     background-size : cover;
 }
 
 /* Depended on screen size */
-@media only screen and ( min-width:0px )
+@media only screen and ( min-height:$tier-1 )
 {
     #page_information_image
     {
@@ -25,7 +24,7 @@
     }
 }
 
-@media only screen and ( min-width:257px )
+@media only screen and ( min-height:$tier-2 )
 {
     #page_information_image
     {
@@ -34,7 +33,7 @@
 }
 
 
-@media only screen and ( min-width:513px )
+@media only screen and ( min-height:$tier-3 )
 {
     #page_information_image
     {
@@ -43,7 +42,7 @@
 }
 
 
-@media only screen and ( min-width:1025px )
+@media only screen and ( min-height:$tier-5 )
 {
     #page_information_image
     {
@@ -52,7 +51,7 @@
 }
 
 /* Anything above normal size */
-@media only screen and ( min-width:1920px )
+@media only screen and ( min-height:1920px )
 {
     #page_information_image
     {
