--- a/scss/_var/_variables.scss
+++ b/scss/_var/_variables.scss
@@ -20,7 +20,7 @@ $document-main-minimum-height : 450px;
 $document-footer-sponsor-minimum-height:175px;
 
 $link-rest-color: white;
-$link-default-rest-color:black;
+$link-footer-rest-color:black;
 
 $link-active-color: #D63031;
 
