--- a/scss/document/footer.scss
+++ b/scss/document/footer.scss
@@ -170,9 +170,10 @@ footer
 .footer-base ol a 
 {
     @extend %default-link;
-    color: black;
     
+    color: $link-footer-rest-color;
     transition : $action-transition;
+
     font-size : 12px;
 }
 
