--- a/scss/front_image.scss
+++ b/scss/front_image.scss
@@ -14,7 +14,7 @@
 
 
 /* Depended on screen size */
-@media only screen and ( min-height:$tier-1 )
+@media only screen and ( min-width:$tier-1 )
 {
     #page_front_image
     {
@@ -22,7 +22,7 @@
     }
 }
 
-@media only screen and ( min-height:$tier-2 )
+@media only screen and ( min-width:$tier-2 )
 {
     #page_front_image
     {
@@ -31,7 +31,7 @@
 }
 
 
-@media only screen and ( min-height:$tier-3 )
+@media only screen and ( min-width:$tier-3 )
 {
     #page_front_image
     {
@@ -40,7 +40,7 @@
 }
 
 
-@media only screen and ( min-height:$tier-5 )
+@media only screen and ( min-width:$tier-5 )
 {
     #page_front_image
     {
@@ -49,7 +49,7 @@
 }
 
 /* Anything above normal size */
-@media only screen and ( min-height:2049px )
+@media only screen and ( min-width:2049px )
 {
     #page_front_image
     {
