--- a/scss/information_image.scss
+++ b/scss/information_image.scss
@@ -16,7 +16,7 @@
 }
 
 /* Depended on screen size */
-@media only screen and ( min-height:$tier-1 )
+@media only screen and ( min-width:$tier-1 )
 {
     #page_information_image
     {
@@ -24,7 +24,7 @@
     }
 }
 
-@media only screen and ( min-height:$tier-2 )
+@media only screen and ( min-width:$tier-2 )
 {
     #page_information_image
     {
@@ -33,7 +33,7 @@
 }
 
 
-@media only screen and ( min-height:$tier-3 )
+@media only screen and ( min-width:$tier-3 )
 {
     #page_information_image
     {
@@ -42,7 +42,7 @@
 }
 
 
-@media only screen and ( min-height:$tier-5 )
+@media only screen and ( min-width:$tier-5 )
 {
     #page_information_image
     {
@@ -51,7 +51,7 @@
 }
 
 /* Anything above normal size */
-@media only screen and ( min-height:2049px )
+@media only screen and ( min-width:2049px )
 {
     #page_information_image
     {
