--- a/scss/document/headers.scss
+++ b/scss/document/headers.scss
@@ -51,4 +51,6 @@ a:hover h4
 
     border : 2px solid rgba( $color: #D63031,
                              $alpha: 1.0 );
+
+    box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.75);
 }
