--- a/scss/front_image.scss
+++ b/scss/front_image.scss
@@ -53,7 +53,7 @@
 /* Anything above normal size */
 //@media only screen and ( min-width:2049px )
 //{
-    #page_front_image_frame
+    #page_front_image
     {
         background-image : url('../images/covers/front/original/front.jpg');
     }
