--- a/scss/document/header.scss
+++ b/scss/document/header.scss
@@ -1,4 +1,4 @@
-header 
+header
 {
     @extend %no-base;
     @extend %default-uppercase;
@@ -12,7 +12,7 @@ header
 
     grid-template-columns: auto;
 
-    grid-template-rows: 15px 
+    grid-template-rows: 30px 
                         auto;
     
     grid-gap: 0px;
@@ -43,10 +43,10 @@ header nav
 header nav ul 
 {
     @extend %no-margins;
+    @extend %no-paddings;
 
     height : 36px;
 
-    padding    : 0px;
     margin-top : 8px;
 
     display : flex;
@@ -103,4 +103,78 @@ header nav ul a
 header nav ul a:hover
 {
     @extend %activate;
+}
+
+/* 
+    Header Rules Depended on size
+*/
+
+
+/*
+    0 <-> 256px
+*/
+@media only screen and ( max-width:256px )
+{
+    
+}
+
+/*
+    257px <-> 512px
+*/
+@media only screen and ( max-width:512px )
+{
+    
+}
+
+/*
+    513px<->768px
+*/
+@media only screen and ( max-width:768px )
+{
+    
+}
+
+/*
+    769px<->1024px
+*/
+@media only screen and ( max-width:1024px )
+{
+    
+
+}
+
+/*
+    1025px <-> 1280px
+*/
+@media only screen and ( max-width:1280px )
+{
+    
+
+}
+
+/*
+    1281px <-> 1536px
+*/
+@media only screen and ( max-width:1536px )
+{
+    
+
+}
+
+/*
+    1792px <-> 2048px
+*/
+@media only screen and ( max-width:1792px )
+{
+    
+
+}
+
+/*
+    2049px <- x
+*/
+@media only screen and ( max-width:2048px )
+{
+    
+
 }
