--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,10 @@ header ul
 {
     display: flex;
     list-style: none;
+    
+    margin:0px;
+    padding: 0px;
+
     justify-content: space-around;
 }
 
