--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,10 +4,10 @@
 
 body 
 {
-    margin:0px;
-    padding:0px;
+    margin  : 0px;
+    padding : 0px;
 
-    display: grid;
+    display : grid;
 
     grid-template-rows   : auto auto auto;
     grid-template-columns: auto;
@@ -64,5 +64,5 @@ footer
 
 .selected
 {
-    color: red !important;
+    color: #D63031 !important;
 }
