--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,8 @@ header ul
 {
     @extend %not-selecteble;
 
-    font-family: 'Open sans';
+    font-family: 'Open Sans';
+    font-size: 18px;
 
     display: flex;
     list-style: none;
